display working (will need to move to separate UC probably?)

--- a/Makefile.config
+++ b/Makefile.config
@@ -19,3 +19,5 @@ HL_LIBS_CPP += lib/devices/gy521/gy521.cpp
 
 HL_LIBS_CPP += taskBlink.cpp
 HL_LIBS_CPP += OledTask.cpp
+HL_LIBS_CPP += turntable.cpp
+HL_LIBS_CPP += multiplexDisplay.cpp
