--- a/Makefile.config
+++ b/Makefile.config
@@ -11,13 +11,21 @@
 HL_LIBS_CPP += $(ROOT)main.cpp
 
 SUBHIGH += -I lib
-HL_LIBS_CPP += lib/protocol/drawing/drawing.cpp
-HL_LIBS_CPP += lib/periph/i2c/i2cMaster.cpp
-HL_LIBS_CPP += lib/devices/ssd1306/ssd1306.cpp
-HL_LIBS_CPP += lib/devices/gy521/gy521.cpp
+#HL_LIBS_CPP += lib/protocol/drawing/drawing.cpp
+#HL_LIBS_CPP += lib/periph/i2c/i2cMaster.cpp
+#HL_LIBS_CPP += lib/devices/ssd1306/ssd1306.cpp
+#HL_LIBS_CPP += lib/devices/gy521/gy521.cpp
 
+# Extra FreeRTOS bits
+HL_LIBS_C += static_freertos_bits.c
 
+# Tasks
 HL_LIBS_CPP += taskBlink.cpp
-HL_LIBS_CPP += OledTask.cpp
 HL_LIBS_CPP += turntable.cpp
 HL_LIBS_CPP += multiplexDisplay.cpp
+HL_LIBS_CPP += commandHandler.cpp
+
+
+# TinyFrame
+SUBHIGH += -I lib/protocol/TinyFrame
+HL_LIBS_C += lib/protocol/TinyFrame/TinyFrame.c
