Add simple main task  * TODO: Should use the RTC for the time, and should use PWM for the LED on/off

--- a/Makefile.config
+++ b/Makefile.config
@@ -24,6 +24,7 @@ HL_LIBS_CPP += taskBlink.cpp
 HL_LIBS_CPP += turntable.cpp
 HL_LIBS_CPP += multiplexDisplay.cpp
 HL_LIBS_CPP += commandHandler.cpp
+HL_LIBS_CPP += mainTask.cpp
 
 
 # TinyFrame
